--- a/less/index.less
+++ b/less/index.less
@@ -4,6 +4,8 @@
    License: none (public domain)
 */
 
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -49,11 +51,34 @@ table {
 }
 
 /* Set every element's box-sizing to border-box */
+
+@mainfont: 'Playfair Display', serif;
+@lightpink: #FFB0F2;
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html, body {
-    height: 100%;
-}
+	height: 100%;
+	margin: 1%;
+	font-family: @mainfont;
+
+	.navbar ul{
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+		max-width: 40%;
+		margin-left: 60%;
+		font-size: 80%;
+
+		a {
+			text-decoration: none;
+		}
+
+	} // closes .navbar ul
+
+	.mainheader {
+		background-color: @lightpink;
+	}
+} // closes html and body
 
