--- a/less/index.less
+++ b/less/index.less
@@ -190,6 +190,9 @@ html, body {
 
 	footer {
 		background-color: #cbbae0;
+		display: flex;
+		padding: .5%;
+		justify-content: center;
 	}
 } // closes html and body
 
